force-app/main/default/objects/PSFR_Retail_Approval_Assignment__c/PSFR_Retail_Approval_Assignment__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>PSFR Retail Approval Assignment</label>
</CustomObject>