force-app/main/default/objects/PSFR_Retail_Approval_Assignment__c/fields/Division_of_User__c.field-meta.xml
<CustomField>
    <fullName>Division_of_User__c</fullName>
    <label>Division of User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>