force-app/main/default/objects/PSFR_Retail_Approval_Assignment__c/fields/R_Sales_Leader__c.field-meta.xml
<CustomField>
    <fullName>R_Sales_Leader__c</fullName>
    <label>R Sales Leader</label>
    <length>100</length>
    <type>Text</type>
</CustomField>